@@ -1,3 +1,7 @@
+r115:
+Added : lz4cat utility, installed on POSX systems (issue 118)
+OS-X compatible compilation of dynamic library (issue 115)
+
 r114:
 Makefile : library correctly compiled with -O3 switch (issue 114)
 Makefile : library compilation compatible with clang
